map view margins gap fix

--- a/prototype/src/styles/app.css
+++ b/prototype/src/styles/app.css
@@ -51,8 +51,8 @@ span {
 }
 
 #content {
-	margin-top: 42px;
-  margin-left: 10px;
+	margin-top: 32px;
+  margin-left: 0px;
 	padding: 0px;
 	width: 100%;
 	overflow: hidden;	
